--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 streamlit
-pandas
 openai
-requests
-plotly
+pandas
+numpy
 gspread
-google-auth
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-thefuzz
-python-Levenshtein
+oauth2client
+plotly
+requests
+rapidfuzz
